[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["John Doe <johndoe@mail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"
pytest = "^7.2.0"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
